--- a/install
+++ b/install
@@ -6,3 +6,6 @@ mkdir ~/.vim/undodir
 
 # Copy to home dir
 cp --parents .bashrc .profile .ackrc .inputrc .tmux.conf .vimrc .vim ~
+
+# Terminal profile
+dconf load /org/gnome/terminal/legacy/profiles:/ < gnome_profile.dconf
